<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">luggage</string>
    <string name="action_settings">Settings</string>

    <!-- Home items -->
    <string name="luggage_locate">快速定位</string>
    <string name="luggage_ble_unlock">蓝牙开锁</string>
    <string name="luggage_sms_unlock">远程开锁</string>
    <string name="luggage_distance">距离</string>
    <string name="luggage_weight">重量</string>
    <string name="luggage_battery">电量</string>
    <string name="luggage_register_finger">采集指纹</string>
    <string name="luggage_delete_finger">删除指纹</string>

    <!-- BLE DATA -->
    <string name="intro_message">
<![CDATA[          
            This sample demonstrates how to use the Bluetooth LE Generic Attribute Profile (GATT)
            to transmit arbitrary data between devices.            
        ]]>
    </string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- BLE Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- Main Menu items -->
    <string name="home">首页</string>
    <string name="foot">足迹</string>
    <string name="new_product">新品上市</string>
    <string name="book">航班预订</string>
    <string name="bleScan">扫描</string>
    <string name="settings">设置</string>
    <string name="logo">Luggage，让出行更简单</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    
</resources>
