<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/luggage" >


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/locate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:onClick="LocateOnClick"
        android:text="@string/luggage_locate" />

    <Button
        android:id="@+id/ble_unlock"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locate"
        android:textColor="#FFFFFF"
        android:background="@drawable/shape"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:onClick="BleUnlockOnClick"
        android:text="@string/luggage_ble_unlock" />

    <Button
        android:id="@+id/sms_unlock"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/ble_unlock"
        android:layout_marginTop="21dp"
        android:layout_centerHorizontal="true"
        android:onClick="SmsUnlockOnClick"
        android:text="@string/luggage_sms_unlock" />

    <Button
        android:id="@+id/distance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sms_unlock"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:onClick="DistanceOnClick"
        android:text="@string/luggage_distance" />

    <Button
        android:id="@+id/battery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape"
        android:onClick="BatteryOnClick"
        android:layout_centerHorizontal="true"
        android:text="@string/luggage_battery"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/weight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/battery"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:layout_centerHorizontal="true"
        android:onClick="WeightOnClick"
        android:text="@string/luggage_weight"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/register_finger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape"
        android:onClick="RegisterFingerOnClick"
        android:text="@string/luggage_register_finger"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/delete_finger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_finger"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:layout_marginTop="22dp"
        android:onClick="DeleteFingerOnClick"
        android:text="@string/luggage_delete_finger"
        android:textColor="#FFFFFF" />

</RelativeLayout>